--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="start_service">Start Service</string>
     <string name="stop_service">Stop Service</string>
+    <string name="reset_stats">Reset</string>
+    <string name="num_screen_on">You turn Screen on for %1$d times</string>
+    <string name="num_unlock">You unlock it for %1$d times</string>
 
 </resources>
