--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,14 @@
 <resources>
 
     <string name="app_name">Phone Usage</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="greeting">Let\'s see...</string>
     <string name="action_settings">Settings</string>
     <string name="start_service">Start Service</string>
     <string name="stop_service">Stop Service</string>
     <string name="reset_stats">Reset</string>
     <string name="num_screen_on">You turn Screen on for %1$d times</string>
     <string name="num_unlock">You unlock it for %1$d times</string>
+    <string name="service_running">Service is running.</string>
+    <string name="service_stopped">Service is stopped.</string>
 
 </resources>
